--- a/tasks/manage_modules.yml
+++ b/tasks/manage_modules.yml
@@ -2,15 +2,21 @@
 - name: manage_modules | Capturing Installed Modules
   shell: pwsh -c "Get-Module -ListAvailable | Select-Object Name | ft -hidetableheaders"
   register: _powershell_installed_modules_currentuser
+  tags:
+    - skip_ansible_lint
 
 - name: manage_modules | Capturing Installed Modules
   shell: pwsh -c "Get-Module -ListAvailable | Select-Object Name | ft -hidetableheaders"
   become: true
   register: _powershell_installed_modules_allusers
+  tags:
+    - skip_ansible_lint
 
 - name: manage_modules | Installing Modules
   shell: pwsh -c "Install-Module -Name {{ item['name'] }} -Scope AllUsers -Force"
   become: true
+  tags:
+    - skip_ansible_lint
   with_items: "{{ powershell_modules }}"
   when: >
         powershell_modules != [] and
@@ -21,6 +27,8 @@
 - name: manage_modules | Installing Modules
   shell: pwsh -c "Install-Module -Name {{ item['name'] }} -Scope CurrentUser -Force"
   become: false
+  tags:
+    - skip_ansible_lint
   with_items: "{{ powershell_modules }}"
   when: >
         powershell_modules != [] and
