--- a/tasks/manage_modules.yml
+++ b/tasks/manage_modules.yml
@@ -2,6 +2,7 @@
 - name: manage_modules | Capturing Installed Modules
   shell: pwsh -c "Get-Module -ListAvailable | Select-Object Name | ft -hidetableheaders"
   register: _powershell_installed_modules_currentuser
+  changed_when: false
   tags:
     - skip_ansible_lint
 
@@ -9,6 +10,7 @@
   shell: pwsh -c "Get-Module -ListAvailable | Select-Object Name | ft -hidetableheaders"
   become: true
   register: _powershell_installed_modules_allusers
+  changed_when: false
   tags:
     - skip_ansible_lint
 
