Disabled Fedora and Ubuntu 18.04 testing
Disabled these as they are not currently supported in this role.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,18 +12,18 @@ env:
   - distribution: centos
     init:        /usr/lib/systemd/systemd
     version:     7
-  - distribution: fedora
-    init:        /usr/lib/systemd/systemd
-    version:     26
-  - distribution: fedora
-    init:        /usr/lib/systemd/systemd
-    version:     25
-  - distribution: fedora
-    init:        /usr/lib/systemd/systemd
-    version:     24
-  - distribution: ubuntu
-    init:        /lib/systemd/systemd
-    version:     bionic
+  # - distribution: fedora
+  #   init:        /usr/lib/systemd/systemd
+  #   version:     26
+  # - distribution: fedora
+  #   init:        /usr/lib/systemd/systemd
+  #   version:     25
+  # - distribution: fedora
+  #   init:        /usr/lib/systemd/systemd
+  #   version:     24
+  # - distribution: ubuntu
+  #   init:        /lib/systemd/systemd
+  #   version:     bionic
   - distribution: ubuntu
     init:        /lib/systemd/systemd
     version:     xenial
