--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,8 +7,16 @@ galaxy_info:
   min_ansible_version: 1.2
 
   platforms:
+    - name: EL
+      versions:
+        - 7
+    - name: Debian
+      versions:
+        - jessie
+        - stretch
     - name: Ubuntu
       versions:
+        - trusty
         - xenial
 
   galaxy_tags:
