--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,6 +14,12 @@ galaxy_info:
       versions:
         - jessie
         - stretch
+    - name: Fedora
+      versions:
+        - 24
+        - 25
+        - 26
+        - 27
     - name: Ubuntu
       versions:
         - trusty
