Cleaned up code and tests
Cleaned up code based on Ansible lint and YAML lint
Implemented updated Travis CI testing

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,8 @@
 ---
 # defaults file for ansible-powershell
 
-powershell_modules: []
+powershell_modules:
+  []
   # - name: VMware.PowerCLI
   #   scope: AllUsers
   #   state: present
