--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -1,28 +1,30 @@
 ---
 - name: debian | Installing Pre-Reqs
   apt:
-    name: "{{ item }}"
+    name: ["apt-transport-https"]
     state: present
   become: true
-  with_items:
-    - apt-transport-https
+  register: result
+  until: result is successful
 
 - name: debian | Adding Powershell Repo Key
   apt_key:
     url: https://packages.microsoft.com/keys/microsoft.asc
     state: present
   become: true
+  register: result
+  until: result is successful
 
 - name: debian | Adding Powershell Repo (Debian)
   apt_repository:
-    repo: "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-debian-{{ ansible_distribution_release }}-prod {{ ansible_distribution_release }} main"
+    repo: "{{ 'deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-debian-' + ansible_distribution_release + '-prod ' + ansible_distribution_release + ' main' }}"
     state: present
   become: true
   when: ansible_distribution == "Debian"
 
 - name: debian | Adding Powershell Repo (Ubuntu)
   apt_repository:
-    repo: "deb [arch=amd64] https://packages.microsoft.com/{{ ansible_distribution|lower }}/{{ ansible_distribution_version }}/prod {{ ansible_distribution_release }} main"
+    repo: "{{ 'deb [arch=amd64] https://packages.microsoft.com/' + ansible_distribution|lower + '/' + ansible_distribution_version + '/prod ' + ansible_distribution_release + ' main' }}"
     state: present
   become: true
   when: ansible_distribution == "Ubuntu"
@@ -32,3 +34,5 @@
     name: powershell
     state: present
   become: true
+  register: result
+  until: result is successful
